# urge

./: .gitignore  AGENTS.md  CLAUDE.md
.claude/: settings.json
.claude/plans/: findings.md  progress.md  task_plan.md
binding/mri/: CMakeLists.txt  binding_patch.cc
content/: CMakeLists.txt
content/input/: mouse_controller.cc  mouse_controller.h
content/public/: engine_graphics.h
content/render/: pipeline_collection.cc  pipeline_collection.h
content/screen/: renderscreen_impl.cc  renderscreen_impl.h
doc/: render_filters.md
doc/api/: api_hash.txt  export_apis.json
renderer/: CMakeLists.txt
renderer/pipeline/: builtin_hlsl_postfx.cc  builtin_hlsl_postfx.h  render_binding.cc  render_binding.h  render_pipeline.cc  render_pipeline.h
